--- a/package.json
+++ b/package.json
@@ -16,19 +16,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.0-rc.7",
-    "@angular/cdk": "~8.2.3",
+    "@angular/cdk": "~9.0.0-rc.6",
     "@angular/common": "~9.0.0-rc.7",
     "@angular/compiler": "~9.0.0-rc.7",
     "@angular/core": "~9.0.0-rc.7",
+    "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "~9.0.0-rc.7",
-    "@angular/material": "^8.2.3",
+    "@angular/material": "^9.0.0-rc.6",
     "@angular/platform-browser": "~9.0.0-rc.7",
     "@angular/platform-browser-dynamic": "~9.0.0-rc.7",
     "@angular/platform-server": "~9.0.0-rc.7",
     "@angular/router": "~9.0.0-rc.7",
     "@nguniversal/express-engine": "^9.0.0-next.14",
     "express": "^4.15.2",
-    "hammerjs": "^2.0.8",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
