--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/common": "~9.0.0-rc.7",
     "@angular/compiler": "~9.0.0-rc.7",
     "@angular/core": "~9.0.0-rc.7",
-    "@angular/flex-layout": "^8.0.0-beta.27",
+    "@angular/flex-layout": "~9.0.0-beta.28",
     "@angular/forms": "~9.0.0-rc.7",
     "@angular/material": "^9.0.0-rc.6",
     "@angular/platform-browser": "~9.0.0-rc.7",
